# quark

./: CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/workflows/: conformance.yml  pages.yml
clients/go/: README.md  federation.go  filter.go  go.mod  json_helpers.go  msgpack.go  server.go  server_core.go  server_test.go
clients/go/conformance/: cases.json
clients/python/: README.md  pyproject.toml
clients/python/quark_client/: __init__.py  client.py  filter.py  qct.py
clients/python/quark_client.egg-info/: SOURCES.txt
clients/python/sael_client/: __init__.py  client.py  filter.py  qct.py  tracing.py
clients/python/sael_client.egg-info/: PKG-INFO  requires.txt
clients/python/tests/: test_filter.py  test_qct.py  test_tracing.py
clients/typescript/: README.md  package.json  tsconfig.json
clients/typescript/src/: filter.ts  index.ts
clients/typescript/test/: filter.test.mjs  qct.test.mjs  tracing.test.mjs
docs/: spec.md
docs/launch/: reddit.md  show-hn.md  twitter-thread.md
tests/conformance/: README.md  conformance_go_test.go  conformance_py.py  conformance_ts.mjs  package.json  pnpm-lock.yaml  run.sh
